<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:background="@drawable/background" android:layout_width="match_parent" android:layout_height="match_parent">
    <View android:background="@drawable/score_top_bar" android:layout_width="match_parent" android:layout_height="100dp"/>
    <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="20dp" android:layout_marginTop="30dp" android:layout_marginRight="20dp" android:layout_marginBottom="10dp">
        <TextView android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" android:textSize="26sp" android:textStyle="bold" android:textColor="@color/white" android:id="@+id/high_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/high_score"/>
        <TextView android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" android:textSize="27sp" android:textColor="@color/white" android:gravity="end" android:id="@+id/high_score" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_toRightOf="@+id/high_text" android:layout_alignParentRight="true" android:layout_toEndOf="@+id/high_text" android:layout_alignParentEnd="true"/>
    </RelativeLayout>
    <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="20dp" android:layout_marginRight="20dp">
        <TextView android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" android:textSize="25sp" android:textStyle="bold" android:textColor="@color/white" android:id="@+id/score_2_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/score_2"/>
        <TextView android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" android:textSize="25sp" android:textColor="@color/white" android:gravity="end" android:id="@+id/score_2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_toRightOf="@+id/score_2_text" android:layout_alignParentRight="true" android:layout_toEndOf="@+id/score_2_text" android:layout_alignParentEnd="true"/>
    </RelativeLayout>
    <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="20dp" android:layout_marginTop="10dp" android:layout_marginRight="20dp">
        <TextView android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" android:textSize="23sp" android:textStyle="bold" android:textColor="@color/white" android:id="@+id/score_3_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/score_3"/>
        <TextView android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" android:textSize="23sp" android:textColor="@color/white" android:gravity="end" android:id="@+id/score_3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_toRightOf="@+id/score_3_text" android:layout_alignParentRight="true" android:layout_toEndOf="@+id/score_3_text" android:layout_alignParentEnd="true"/>
    </RelativeLayout>
    <RelativeLayout android:layout_gravity="center_horizontal" android:id="@+id/grand_score_layout" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="50dp">
        <View android:id="@+id/grand_score_bar" android:background="@drawable/grand_score_bar" android:layout_width="match_parent" android:layout_height="10dp"/>
        <TextView android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" android:textSize="50sp" android:textStyle="bold" android:textColor="@color/white" android:id="@+id/grand_score_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/grand_score" android:layout_below="@+id/grand_score_bar" android:layout_centerHorizontal="true"/>
        <TextView android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" android:textSize="45sp" android:textColor="@color/white" android:gravity="end" android:id="@+id/grand_score" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@+id/grand_score_text" android:layout_centerHorizontal="true"/>
        <View android:background="@drawable/grand_score_bar" android:layout_width="match_parent" android:layout_height="10dp" android:layout_below="@+id/grand_score"/>
    </RelativeLayout>
</LinearLayout>
