<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:id="@+id/multi_layout" android:background="@drawable/background" android:layout_width="match_parent" android:layout_height="match_parent">
    <ProgressBar android:id="@+id/multi_top_bar" android:layout_width="match_parent" android:layout_height="6dp" android:max="200" android:progress="0" android:secondaryProgress="20" android:indeterminate="false" android:progressDrawable="@drawable/h_bar_start" android:minWidth="200dp" android:minHeight="50dp" style="?android:attr/progressBarStyleHorizontal"/>
    <ProgressBar android:id="@+id/multi_progress_left" android:layout_width="6dp" android:layout_height="match_parent" android:max="200" android:progress="10" android:indeterminate="false" android:progressDrawable="@drawable/v_bar" android:layout_below="@+id/multi_top" style="?android:attr/progressBarStyleHorizontal"/>
    <ProgressBar android:id="@+id/multi_progress_right" android:layout_width="6dp" android:layout_height="match_parent" android:max="200" android:progress="10" android:indeterminate="false" android:progressDrawable="@drawable/v_bar" android:layout_below="@+id/multi_top" android:layout_alignParentRight="true" android:layout_alignParentEnd="true" style="?android:attr/progressBarStyleHorizontal"/>
    <RelativeLayout android:id="@+id/multi_top" android:background="@drawable/game_phase_top" android:layout_width="match_parent" android:layout_height="190dp" android:layout_below="@+id/multi_top_bar">
        <TextView android:textSize="20sp" android:textColor="@color/white" android:id="@+id/player1_name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5dp" android:layout_marginTop="2dp" android:layout_marginStart="5dp"/>
        <ImageView android:id="@+id/player1_image" android:background="@color/white" android:layout_width="35dp" android:layout_height="35dp" android:layout_marginLeft="10dp" android:layout_marginTop="2dp" android:layout_below="@+id/player1_name" android:contentDescription="@string/player_1_image" android:layout_marginStart="10dp"/>
        <TextView android:textSize="20sp" android:textColor="@color/white" android:id="@+id/player2_name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2dp" android:layout_marginRight="5dp" android:layout_alignParentRight="true" android:layout_marginEnd="5dp" android:layout_alignParentEnd="true"/>
        <ImageView android:id="@+id/player2_image" android:background="@color/white" android:layout_width="35dp" android:layout_height="35dp" android:layout_marginTop="2dp" android:layout_marginRight="10dp" android:layout_below="@+id/player2_name" android:layout_alignParentRight="true" android:contentDescription="@string/player_2_image" android:layout_marginEnd="10dp" android:layout_alignParentEnd="true"/>
        <TextView android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" android:textSize="40sp" android:textStyle="bold" android:textColor="@color/white" android:id="@+id/multi_timer" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerInParent="true"/>
        <TextView android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" android:textSize="30sp" android:textColor="@color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="20dp" android:layout_alignParentBottom="true"/>
        <TextView android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" android:textSize="30sp" android:textColor="@color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="20dp" android:layout_alignParentRight="true" android:layout_alignParentBottom="true" android:layout_alignParentEnd="true"/>
    </RelativeLayout>
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_toLeftOf="@+id/multi_progress_right" android:layout_toRightOf="@+id/multi_progress_left" android:layout_below="@+id/multi_top" android:layout_toStartOf="@+id/multi_progress_right" android:layout_toEndOf="@+id/multi_progress_left">
        <RelativeLayout android:background="@drawable/question_back" android:layout_width="match_parent" android:layout_height="120dp" android:layout_marginBottom="20dp">
            <TextView android:textAppearance="?android:attr/textAppearanceLarge" android:textSize="50sp" android:textColor="@color/white" android:id="@+id/multiQst" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerInParent="true"/>
        </RelativeLayout>
        <GridLayout android:layout_gravity="center" android:layout_width="match_parent" android:layout_height="wrap_content" android:rowCount="2" android:columnCount="2">
            <Button android:textSize="20sp" android:textColor="@color/white" android:id="@+id/multiOpt_1" android:background="@drawable/button" android:layout_width="160dp" android:layout_height="120dp" android:layout_marginLeft="5dp" android:layout_marginBottom="15dp" android:layout_column="0" android:layout_row="0" android:layout_marginStart="5dp"/>
            <Button android:textSize="20sp" android:textColor="@color/white" android:layout_gravity="end" android:id="@+id/multiOpt_2" android:background="@drawable/button" android:layout_width="160dp" android:layout_height="120dp" android:layout_marginRight="5dp" android:layout_column="1" android:layout_row="0" android:layout_marginEnd="5dp"/>
            <Button android:textSize="20sp" android:textColor="@color/white" android:id="@+id/multiOpt_3" android:background="@drawable/button" android:layout_width="160dp" android:layout_height="120dp" android:layout_marginLeft="5dp" android:layout_column="0" android:layout_row="1" android:layout_marginStart="5dp"/>
            <Button android:textSize="20sp" android:textColor="@color/white" android:layout_gravity="end" android:id="@+id/multiOpt_4" android:background="@drawable/button" android:layout_width="160dp" android:layout_height="120dp" android:layout_marginRight="5dp" android:layout_column="1" android:layout_row="1" android:layout_marginEnd="5dp"/>
        </GridLayout>
    </LinearLayout>
    <View android:id="@+id/multi_shade" android:background="@color/h_bar_background" android:visibility="gone" android:layout_width="match_parent" android:layout_height="match_parent"/>
    <LinearLayout android:orientation="vertical" android:id="@+id/multi_shade_loading" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerInParent="true">
        <ProgressBar android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="2dp"/>
        <TextView android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" android:textColor="@color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/please_wait"/>
    </LinearLayout>
</RelativeLayout>
